<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#fff"
    android:transitionName="transition_signup"
    tools:context=".activities.loginsignup.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/restaurantToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:theme="@style/CardView.Light"
            app:titleMarginStart="40dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_arrow_back_black_24dp" />



            </FrameLayout>
            <!--
                      <RelativeLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content">

                          <ImageView
                              android:id="@+id/back_button"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:padding="5dp"
                              android:src="@drawable/ic_arrow_back_black_24dp" />

                          <ImageView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_alignParentEnd="true"
                              android:layout_gravity="right"
                              android:padding="5dp"
                              android:src="@drawable/ic_search" />

                      </RelativeLayout>-->


        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/muli_black"
                android:text="@string/create_acc"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/enter_your_name"
                    app:hintTextColor="#000"
                    app:boxStrokeColor="#000"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/ic_edit_black_24dp"
                    app:startIconTint="#000"
                    app:endIconMode="clear_text"
                    app:endIconTint="#000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli"
                        android:inputType="text"
                        android:textColor="#000" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/enter_mailid"
                    app:hintTextColor="#000"
                    app:boxStrokeColor="#000"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/ic_email_black_24dp"
                    app:startIconTint="#000"
                    app:endIconMode="clear_text"
                    app:endIconTint="#000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli"
                        android:inputType="text"
                        android:textColor="#000" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/enter_password"
                    app:hintTextColor="#000"
                    app:boxStrokeColor="#000"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
                    app:startIconTint="#000"
                    app:endIconMode="password_toggle"
                    app:endIconTint="#000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli"
                        android:inputType="textPassword"
                        android:textColor="#000" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/conform_pwd"
                    app:hintTextColor="#000"
                    app:boxStrokeColor="#000"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
                    app:startIconTint="#000"
                    app:endIconMode="password_toggle"
                    app:endIconTint="#000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli"
                        android:inputType="textPassword"
                        android:textColor="#000" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/enter_phone_number"
                    app:hintTextColor="#000"
                    app:boxStrokeColor="#000"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/ic_phone_black_24dp"
                    app:startIconTint="#000"
                    app:endIconMode="clear_text"
                    app:endIconTint="#000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli"
                        android:inputType="number"
                        android:textColor="#000"
                        android:maxLength="10"/>

                </com.google.android.material.textfield.TextInputLayout>



                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/signup"
                    android:textColor="#fff"
                    android:layout_marginTop="30dp" />

                <!--<Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:background="#00000000"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    />-->


            </LinearLayout>



        </LinearLayout>
    </LinearLayout>



</ScrollView>